--- a/_notebooks/2022-03-15-bds_2주차.ipynb
+++ b/_notebooks/2022-03-15-bds_2주차.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e18d4288-4668-45c2-a66f-5bb76f5b9ca2",
    "metadata": {
     "id": "e18d4288-4668-45c2-a66f-5bb76f5b9ca2"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c4a78936-73df-4a20-8041-0d76aa07fd0f",
    "metadata": {
     "id": "c4a78936-73df-4a20-8041-0d76aa07fd0f",
@@ -43,7 +43,7 @@
        "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3373,7 +3373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 5,
    "id": "3636faf5-07a9-4812-aedc-3f49d0e91a36",
    "metadata": {},
    "outputs": [],
@@ -3383,7 +3383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 6,
    "id": "cc8583c5-98d4-48d6-b6ae-7487614aa507",
    "metadata": {},
    "outputs": [],
@@ -3781,7 +3781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 8,
    "id": "0ca9554d-2793-4c90-8a9c-8dcde626d742",
    "metadata": {},
    "outputs": [
@@ -3795,7 +3795,7 @@
        "       [4]])>"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3815,86 +3815,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 15,
    "id": "a1369745-dc0d-4949-9d3c-e40d2e6c2f2e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method amin of <tf.Tensor: shape=(1, 4), dtype=int64, numpy=array([[1, 2, 3, 4]])>>"
+       "<tf.Tensor: shape=(), dtype=int64, numpy=1>"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.min"
+    "a.min()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 16,
    "id": "2c48b085-bb88-4484-9f7a-ae6bffae5e82",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method mean of <tf.Tensor: shape=(1, 4), dtype=int64, numpy=array([[1, 2, 3, 4]])>>"
+       "<tf.Tensor: shape=(), dtype=float64, numpy=2.5>"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.mean"
+    "a.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 18,
    "id": "d66bd596-a4fe-46fe-873e-ed9299aa7088",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(), dtype=int32, numpy=1>"
+       "<tf.Tensor: shape=(), dtype=int64, numpy=1>"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "min(a)"
+    "min(a.reshape(-1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 20,
    "id": "fef59afa-17cd-427c-8217-3ca8889c60f0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(), dtype=int32, numpy=3>"
+       "<tf.Tensor: shape=(), dtype=int64, numpy=4>"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "max(a)"
+    "max(a.reshape(-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "58cf389c-596e-4c96-abb4-b7b0d5ef266c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=int64, numpy=4>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.max()"
    ]
   },
   {
