--- a/_notebooks/2022-03-18-Earthquake-real.ipynb
+++ b/_notebooks/2022-03-18-Earthquake-real.ipynb
@@ -16,7 +16,7 @@
     "- badges: true\n",
     "- comments: false\n",
     "- author: 최서연\n",
-    "- categories: [Graph Laplacian, PCA, eigenvalue deposition]"
+    "- categories: [Graph Laplacian, PCA, eigenvalue decomposition]"
    ]
   },
   {
