--- a/_notebooks/2022-03-28-Earthquake.ipynb
+++ b/_notebooks/2022-03-28-Earthquake.ipynb
@@ -16,12 +16,12 @@
     "- badges: true\n",
     "- comments: false\n",
     "- author: 최서연\n",
-    "- categories: [Graph Laplacian, PCA, eigenvalue deposition]"
+    "- categories: [Graph Laplacian, PCA, eigenvalue decomposition]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 1,
    "id": "f4cbc022-5d75-4201-9427-46a79ed76844",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 2,
    "id": "4ccab044-6f2e-4bbf-aa79-8172e117d6ed",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 3,
    "id": "6a1f43b5-8c2f-4dc3-97c6-468f08231aef",
    "metadata": {},
    "outputs": [],
@@ -63,12 +63,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 4,
+   "id": "0d11f6c2-342b-4e76-9bd8-fda5079406a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/earthquakes-23k.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "0910e5ea-6e0e-49d2-893b-fc04a47df73c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "_df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/earthquakes-23k.csv').assign(Year=list(map(lambda x: x.split('/')[-1], df.Date))).query('Year>=\"2004\" & Year<=\"2011\"').reset_index().iloc[:,1:]"
+    "_df = df.assign(Year=list(map(lambda x: x.split('/')[-1], df.Date))).query('Year>=\"2004\" & Year<=\"2011\"').reset_index().iloc[:,1:]"
    ]
   },
   {
@@ -81,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 6,
    "id": "dffe4b90-9fee-47c2-a6fe-0e4cb78ccc16",
    "metadata": {},
    "outputs": [],
@@ -99,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "c715fdc7-916d-4b6d-ad60-86cb3ab582cd",
    "metadata": {},
    "outputs": [],
@@ -126,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "d393f720-c59b-4e68-9c7b-8fdd9029a2bf",
    "metadata": {},
    "outputs": [],
@@ -137,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "985c912d-5894-4e9b-95b2-8c18b97e09fc",
    "metadata": {
     "tags": []
@@ -165,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "bac04d2b-1de1-42a7-9c6e-4e4083d4304a",
    "metadata": {},
    "outputs": [],
@@ -181,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "41e12319-3639-4e02-ab1b-5ef7d9675a54",
    "metadata": {},
    "outputs": [],
@@ -191,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "249b177f-cebf-408f-a609-a7f53f1c409b",
    "metadata": {},
    "outputs": [],
@@ -210,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "5e8e3a5c-441c-4b77-b0e2-dde3f7560bc2",
    "metadata": {},
    "outputs": [],
@@ -220,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "c294cd41-abbd-4860-9c8e-0dffffe0f911",
    "metadata": {},
    "outputs": [],
@@ -239,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "02700222-adeb-4888-9f11-25d5caf09574",
    "metadata": {},
    "outputs": [],
@@ -249,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "8f346fd8-ca40-4498-966f-40e6d4669c2f",
    "metadata": {},
    "outputs": [],
@@ -273,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "e25ddaa9-981e-4017-846d-ef5cb7155f9b",
    "metadata": {},
    "outputs": [],
@@ -284,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "9a9d1d21-c683-4286-9f3d-f15971b74ed4",
    "metadata": {},
    "outputs": [],
@@ -313,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 19,
    "id": "c7f016a0-2783-44bb-a597-2b6534241352",
    "metadata": {
     "tags": []
@@ -325,7 +335,7 @@
        "(0.032630357866676576+1.6156941820979636e-22j)"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 20,
    "id": "72ec41f0-2a2d-45b5-88f4-c94b44328bd1",
    "metadata": {},
    "outputs": [],
@@ -368,7 +378,340 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 37,
+   "id": "4e1e6a1b-a89a-4921-a824-71abcef23c7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1100.28212223, 1100.28212223, 1100.28212223, ..., 1100.28212223,\n",
+       "        1100.28212223, 1100.28212223],\n",
+       "       [1100.06079575, 1100.06079575, 1100.06079575, ..., 1100.06079575,\n",
+       "        1100.06079575, 1100.06079575],\n",
+       "       [1095.79557167, 1095.79557167, 1095.79557167, ..., 1095.79557167,\n",
+       "        1095.79557167, 1095.79557167],\n",
+       "       ...,\n",
+       "       [1099.32971764, 1099.32971764, 1099.32971764, ..., 1099.32971764,\n",
+       "        1099.32971764, 1099.32971764],\n",
+       "       [1099.30350883, 1099.30350883, 1099.30350883, ..., 1099.30350883,\n",
+       "        1099.30350883, 1099.30350883],\n",
+       "       [1099.36977786, 1099.36977786, 1099.36977786, ..., 1099.36977786,\n",
+       "        1099.36977786, 1099.36977786]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_W[:571,:571]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b2701396-46a7-437a-8c60-d682e9fd8cc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Magnitude</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>comp1</th>\n",
+       "      <th>comp2</th>\n",
+       "      <th>comp3</th>\n",
+       "      <th>comp4</th>\n",
+       "      <th>comp5</th>\n",
+       "      <th>comp6</th>\n",
+       "      <th>comp7</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01/01/2004</td>\n",
+       "      <td>-21.476</td>\n",
+       "      <td>169.859</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>5.873737+0.000000j</td>\n",
+       "      <td>0.001420+0.000000j</td>\n",
+       "      <td>0.002416+0.000000j</td>\n",
+       "      <td>0.002678+0.000000j</td>\n",
+       "      <td>-0.002953+0.000000j</td>\n",
+       "      <td>0.003149+0.000000j</td>\n",
+       "      <td>-0.000137+0.000000j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>01/01/2004</td>\n",
+       "      <td>-8.310</td>\n",
+       "      <td>115.788</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>5.873737+0.000000j</td>\n",
+       "      <td>-0.002581+0.000000j</td>\n",
+       "      <td>0.063456+0.000000j</td>\n",
+       "      <td>0.093637+0.000000j</td>\n",
+       "      <td>0.009979+0.000000j</td>\n",
+       "      <td>0.003935+0.000000j</td>\n",
+       "      <td>0.003970+0.000000j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>01/01/2004</td>\n",
+       "      <td>17.488</td>\n",
+       "      <td>-101.303</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>5.873737+0.000000j</td>\n",
+       "      <td>0.000453+0.000000j</td>\n",
+       "      <td>-0.000883+0.000000j</td>\n",
+       "      <td>-0.001190+0.000000j</td>\n",
+       "      <td>0.000621+0.000000j</td>\n",
+       "      <td>0.009341+0.000000j</td>\n",
+       "      <td>-0.000023+0.000000j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>01/01/2004</td>\n",
+       "      <td>17.420</td>\n",
+       "      <td>-101.315</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>5.873737+0.000000j</td>\n",
+       "      <td>0.000454+0.000000j</td>\n",
+       "      <td>-0.000882+0.000000j</td>\n",
+       "      <td>-0.001189+0.000000j</td>\n",
+       "      <td>0.000621+0.000000j</td>\n",
+       "      <td>0.009344+0.000000j</td>\n",
+       "      <td>-0.000023+0.000000j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>01/03/2004</td>\n",
+       "      <td>-22.376</td>\n",
+       "      <td>169.728</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>5.873737+0.000000j</td>\n",
+       "      <td>0.001531+0.000000j</td>\n",
+       "      <td>0.002436+0.000000j</td>\n",
+       "      <td>0.002702+0.000000j</td>\n",
+       "      <td>-0.003010+0.000000j</td>\n",
+       "      <td>0.003158+0.000000j</td>\n",
+       "      <td>-0.000141+0.000000j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>566</th>\n",
+       "      <td>12/30/2004</td>\n",
+       "      <td>12.237</td>\n",
+       "      <td>92.515</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>5.873737+0.000000j</td>\n",
+       "      <td>-0.001166+0.000000j</td>\n",
+       "      <td>-0.001700+0.000000j</td>\n",
+       "      <td>-0.001429+0.000000j</td>\n",
+       "      <td>0.001281+0.000000j</td>\n",
+       "      <td>0.005170+0.000000j</td>\n",
+       "      <td>0.000177+0.000000j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>567</th>\n",
+       "      <td>12/31/2004</td>\n",
+       "      <td>7.120</td>\n",
+       "      <td>92.533</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>5.873737+0.000000j</td>\n",
+       "      <td>-0.001179+0.000000j</td>\n",
+       "      <td>-0.001749+0.000000j</td>\n",
+       "      <td>-0.001490+0.000000j</td>\n",
+       "      <td>0.001333+0.000000j</td>\n",
+       "      <td>0.005106+0.000000j</td>\n",
+       "      <td>0.000185+0.000000j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>568</th>\n",
+       "      <td>12/31/2004</td>\n",
+       "      <td>7.636</td>\n",
+       "      <td>93.947</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>5.873737+0.000000j</td>\n",
+       "      <td>-0.001204+0.000000j</td>\n",
+       "      <td>-0.001848+0.000000j</td>\n",
+       "      <td>-0.001568+0.000000j</td>\n",
+       "      <td>0.001388+0.000000j</td>\n",
+       "      <td>0.005041+0.000000j</td>\n",
+       "      <td>0.000192+0.000000j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>569</th>\n",
+       "      <td>12/31/2004</td>\n",
+       "      <td>6.204</td>\n",
+       "      <td>92.913</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>5.873737+0.000000j</td>\n",
+       "      <td>-0.001187+0.000000j</td>\n",
+       "      <td>-0.001783+0.000000j</td>\n",
+       "      <td>-0.001522+0.000000j</td>\n",
+       "      <td>0.001359+0.000000j</td>\n",
+       "      <td>0.005077+0.000000j</td>\n",
+       "      <td>0.000188+0.000000j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>570</th>\n",
+       "      <td>12/31/2004</td>\n",
+       "      <td>4.730</td>\n",
+       "      <td>95.140</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>5.873737+0.000000j</td>\n",
+       "      <td>-0.001233+0.000000j</td>\n",
+       "      <td>-0.001975+0.000000j</td>\n",
+       "      <td>-0.001688+0.000000j</td>\n",
+       "      <td>0.001480+0.000000j</td>\n",
+       "      <td>0.004949+0.000000j</td>\n",
+       "      <td>0.000205+0.000000j</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>571 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date  Latitude  Longitude  Magnitude  Year               comp1  \\\n",
+       "0    01/01/2004   -21.476    169.859        5.5  2004  5.873737+0.000000j   \n",
+       "1    01/01/2004    -8.310    115.788        5.8  2004  5.873737+0.000000j   \n",
+       "2    01/01/2004    17.488   -101.303        6.1  2004  5.873737+0.000000j   \n",
+       "3    01/01/2004    17.420   -101.315        5.7  2004  5.873737+0.000000j   \n",
+       "4    01/03/2004   -22.376    169.728        6.0  2004  5.873737+0.000000j   \n",
+       "..          ...       ...        ...        ...   ...                 ...   \n",
+       "566  12/30/2004    12.237     92.515        5.7  2004  5.873737+0.000000j   \n",
+       "567  12/31/2004     7.120     92.533        6.1  2004  5.873737+0.000000j   \n",
+       "568  12/31/2004     7.636     93.947        5.6  2004  5.873737+0.000000j   \n",
+       "569  12/31/2004     6.204     92.913        6.0  2004  5.873737+0.000000j   \n",
+       "570  12/31/2004     4.730     95.140        5.9  2004  5.873737+0.000000j   \n",
+       "\n",
+       "                  comp2               comp3               comp4  \\\n",
+       "0    0.001420+0.000000j  0.002416+0.000000j  0.002678+0.000000j   \n",
+       "1   -0.002581+0.000000j  0.063456+0.000000j  0.093637+0.000000j   \n",
+       "2    0.000453+0.000000j -0.000883+0.000000j -0.001190+0.000000j   \n",
+       "3    0.000454+0.000000j -0.000882+0.000000j -0.001189+0.000000j   \n",
+       "4    0.001531+0.000000j  0.002436+0.000000j  0.002702+0.000000j   \n",
+       "..                  ...                 ...                 ...   \n",
+       "566 -0.001166+0.000000j -0.001700+0.000000j -0.001429+0.000000j   \n",
+       "567 -0.001179+0.000000j -0.001749+0.000000j -0.001490+0.000000j   \n",
+       "568 -0.001204+0.000000j -0.001848+0.000000j -0.001568+0.000000j   \n",
+       "569 -0.001187+0.000000j -0.001783+0.000000j -0.001522+0.000000j   \n",
+       "570 -0.001233+0.000000j -0.001975+0.000000j -0.001688+0.000000j   \n",
+       "\n",
+       "                  comp5               comp6               comp7  \n",
+       "0   -0.002953+0.000000j  0.003149+0.000000j -0.000137+0.000000j  \n",
+       "1    0.009979+0.000000j  0.003935+0.000000j  0.003970+0.000000j  \n",
+       "2    0.000621+0.000000j  0.009341+0.000000j -0.000023+0.000000j  \n",
+       "3    0.000621+0.000000j  0.009344+0.000000j -0.000023+0.000000j  \n",
+       "4   -0.003010+0.000000j  0.003158+0.000000j -0.000141+0.000000j  \n",
+       "..                  ...                 ...                 ...  \n",
+       "566  0.001281+0.000000j  0.005170+0.000000j  0.000177+0.000000j  \n",
+       "567  0.001333+0.000000j  0.005106+0.000000j  0.000185+0.000000j  \n",
+       "568  0.001388+0.000000j  0.005041+0.000000j  0.000192+0.000000j  \n",
+       "569  0.001359+0.000000j  0.005077+0.000000j  0.000188+0.000000j  \n",
+       "570  0.001480+0.000000j  0.004949+0.000000j  0.000205+0.000000j  \n",
+       "\n",
+       "[571 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_df.query('Year==\"2004\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a1c610b6-2c6d-4108-ad30-8b4cafc30b72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_G = nx.Graph(_W-np.identity(len(f)))\n",
+    "_pos = nx.spring_layout(_G,iterations=20)\n",
+    "m_pos = list(zip(_df.Longitude,_df.Latitude))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14551652-eec8-4f9f-83c7-6d0bd8799bdf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14ae1787-31f1-4e7e-b0cf-4a098a4b9a8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1eb8fc8-a6fc-42b9-935a-09854b477b6e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "2af78a73-da96-4b0d-a91b-126d11b44978",
    "metadata": {},
    "outputs": [],
@@ -380,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 22,
    "id": "3352f6e5-07d2-4ba0-97af-d2bf5d58a1a8",
    "metadata": {
     "tags": []
@@ -411,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 23,
    "id": "3786a073-e349-4e96-9ccf-6b5d05caf5a4",
    "metadata": {
     "tags": []
@@ -442,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 24,
    "id": "eda4f741-643e-4a9c-8d67-a8bde5356606",
    "metadata": {
     "tags": []
@@ -473,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 25,
    "id": "646d7f5a-9e37-4f07-b7d9-0cb3280c2bf2",
    "metadata": {
     "tags": []
@@ -504,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 26,
    "id": "5427aaca-fe90-4343-aeb7-e5b18ab7e379",
    "metadata": {
     "tags": []
@@ -535,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 27,
    "id": "f1024e29-d637-45c5-a79b-308f0fc743eb",
    "metadata": {
     "tags": []
@@ -566,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 28,
    "id": "579ccb46-2930-4df8-bf82-c3dd14d4e63a",
    "metadata": {
     "tags": []
