--- a/_notebooks/2022-04-01-Bootstrap.ipynb
+++ b/_notebooks/2022-04-01-Bootstrap.ipynb
@@ -1079,8 +1079,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d7d4ea0a-c53c-4a27-a4b0-7c5ef53715da",
+   "metadata": {},
+   "source": [
+    "학습할떄나 이렇게 많이 돌리지.. 실제로는 안 해.."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "id": "ef8192d0-56c5-4766-9740-64409e3c110a",
    "metadata": {},
    "outputs": [
@@ -1088,22 +1096,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bootstrap C.I. (normal interval):  61.1517 \n",
-      "Bootstrap C.I. (Pivotal interval):  78.50652 \n",
-      "Bootstrap C.I. (Percentile interval):  55.7328 \n",
-      "theoretical C.I. (normal interval):  79.21299"
+      "Bootstrap C.I. (normal interval):  5.114787 \n",
+      "Bootstrap C.I. (Pivotal interval):  6.473361 \n",
+      "Bootstrap C.I. (Percentile interval):  5.008469 \n",
+      "theoretical C.I. (normal interval):  4.583317"
      ]
     }
    ],
    "source": [
     "B=2000;M=1000\n",
     "set.seed(1)\n",
-    "n=100\n",
+    "n=10\n",
     "\n",
     "x=matrix(runif(n*M),M,n)\n",
     "c22=1/rowSums((x-rowMeans(x))^2)\n",
     "#ep=matrix(rgamma(n*M,shape=2,scale=sqrt(1/2))-sqrt(2),M,n)\n",
-    "ep=matrix(rcauchy(n*M),M,n)\n",
+    "# ep=matrix(rcauchy(n*M),M,n)\n",
+    "ep=matrix(rnorm(n*M),M,n)\n",
     "y=2+x+ep\n",
     "sxx=rowSums(x^2)-n*rowMeans(x)^2\n",
     "sxy=rowSums(x*y)-n*rowMeans(x)*rowMeans(y)\n",
@@ -1137,48 +1146,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b7dc5338-8ccd-422b-96d0-7f053762616d",
+   "metadata": {},
+   "source": [
+    "pivotal의 C.I가 가장 95%에 근접하다 $\\rightarrow$ 하지만 높다고 무조건 좋은 게 아냐. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "id": "79a61c01-edd9-455c-a137-7ed2371ff149",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>0.984</li><li>0.995</li><li>0.916</li><li>0.965</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 0.984\n",
-       "\\item 0.995\n",
-       "\\item 0.916\n",
-       "\\item 0.965\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 0.984\n",
-       "2. 0.995\n",
-       "3. 0.916\n",
-       "4. 0.965\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1] 0.984 0.995 0.916 0.965"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrap C.I. (normal interval):  0.934 \n",
+      "Bootstrap C.I. (Pivotal interval):  0.964 \n",
+      "Bootstrap C.I. (Percentile interval):  0.921 \n",
+      "theoretical C.I. (normal interval):  0.924"
+     ]
     }
    ],
    "source": [
     "# coverage proportions\n",
-    "c(mean(apply(BN-1,1,prod)<0),mean(apply(BP-1,1,prod)<0),mean(apply(BPer-1,1,prod)<0),mean(apply(AN-1,1,prod)<0))"
+    "cat(\"Bootstrap C.I. (normal interval): \",c(mean(apply(BN-1,1,prod)<0)),\"\\nBootstrap C.I. (Pivotal interval): \",c(mean(apply(BP-1,1,prod)<0)),\"\\nBootstrap C.I. (Percentile interval): \",c(mean(apply(BPer-1,1,prod)<0)),\"\\ntheoretical C.I. (normal interval): \",c(mean(apply(AN-1,1,prod)<0)))"
    ]
   },
   {
@@ -1202,8 +1196,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "92dfbfe4-3b55-4926-8c59-5d7bbceed399",
+   "metadata": {},
+   "source": [
+    "정규성 가정한 거랑 이론값이랑 차이 있을걸?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 61,
    "id": "6269ee51-7bab-4c53-9659-67ad687cd7d9",
    "metadata": {},
    "outputs": [
@@ -1260,48 +1262,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f6ccebb2-43f0-4b42-af59-9e932f959b8d",
+   "metadata": {},
+   "source": [
+    "pivotal이 가장 95%에 근접하네~\n",
+    "\n",
+    "Normal 가정보다 이론이 더 안좋네? $\\rightarrow$ 위험할 수 있어, 마음대로 정규성 가정은 금지"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 62,
    "id": "7333f3ff-fa0f-45c1-b62a-731ba6cf7d19",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>0.932</li><li>0.947</li><li>0.904</li><li>0.907</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 0.932\n",
-       "\\item 0.947\n",
-       "\\item 0.904\n",
-       "\\item 0.907\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 0.932\n",
-       "2. 0.947\n",
-       "3. 0.904\n",
-       "4. 0.907\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1] 0.932 0.947 0.904 0.907"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrap C.I. (normal interval):  0.932 \n",
+      "Bootstrap C.I. (Pivotal interval):  0.947 \n",
+      "Bootstrap C.I. (Percentile interval):  0.904 \n",
+      "theoretical C.I. (normal interval):  0.907"
+     ]
     }
    ],
    "source": [
     "# coverage proportions\n",
-    "c(mean(apply(BN-1,1,prod)<0),mean(apply(BP-1,1,prod)<0),mean(apply(BPer-1,1,prod)<0),mean(apply(AN-1,1,prod)<0))"
+    "cat(\"Bootstrap C.I. (normal interval): \",c(mean(apply(BN-1,1,prod)<0)),\"\\nBootstrap C.I. (Pivotal interval): \",c(mean(apply(BP-1,1,prod)<0)),\"\\nBootstrap C.I. (Percentile interval): \",c(mean(apply(BPer-1,1,prod)<0)),\"\\ntheoretical C.I. (normal interval): \",c(mean(apply(AN-1,1,prod)<0)))"
    ]
   },
   {
@@ -1325,8 +1314,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1b049f75-c807-4ce6-b1a9-783ec0e96c37",
+   "metadata": {},
+   "source": [
+    "$\\epsilon$ 이 정규성 가정을 따르지 않더라도 $\\hat{\\beta}$의 n이 충분히 크면 정규성 가정 가능하지 $\\rightarrow$ 중심극한정리"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 59,
    "id": "bfdc6083-4ea2-4ac6-9292-8f026a548cf3",
    "metadata": {},
    "outputs": [
@@ -1383,48 +1380,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ca56186f-6cd7-4a9d-bfdf-4961d29bd5e3",
+   "metadata": {},
+   "source": [
+    "표본이 어느정도 확보되면(30이상) 정규성 가정 위배하더라도 정규성 가정 가능\n",
+    "\n",
+    "Noramal 이랑 이론 좋네"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 60,
    "id": "3dc6b3e7-75d6-45a5-bfb5-91423a862253",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>0.952</li><li>0.982</li><li>0.949</li><li>0.953</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 0.952\n",
-       "\\item 0.982\n",
-       "\\item 0.949\n",
-       "\\item 0.953\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 0.952\n",
-       "2. 0.982\n",
-       "3. 0.949\n",
-       "4. 0.953\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1] 0.952 0.982 0.949 0.953"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrap C.I. (normal interval):  0.952 \n",
+      "Bootstrap C.I. (Pivotal interval):  0.982 \n",
+      "Bootstrap C.I. (Percentile interval):  0.949 \n",
+      "theoretical C.I. (normal interval):  0.953"
+     ]
     }
    ],
    "source": [
     "# coverage proportions\n",
-    "c(mean(apply(BN-1,1,prod)<0),mean(apply(BP-1,1,prod)<0),mean(apply(BPer-1,1,prod)<0),mean(apply(AN-1,1,prod)<0))"
+    "cat(\"Bootstrap C.I. (normal interval): \",c(mean(apply(BN-1,1,prod)<0)),\"\\nBootstrap C.I. (Pivotal interval): \",c(mean(apply(BP-1,1,prod)<0)),\"\\nBootstrap C.I. (Percentile interval): \",c(mean(apply(BPer-1,1,prod)<0)),\"\\ntheoretical C.I. (normal interval): \",c(mean(apply(AN-1,1,prod)<0)))"
    ]
   },
   {
@@ -1448,8 +1432,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8aa7133d-2e26-42fe-9d1c-3a97c7ac07b7",
+   "metadata": {},
+   "source": [
+    "분산 바꿔서 시도해보기(등분산 위배)\n",
+    "\n",
+    "- Normal 은 괜찮을 수도\n",
+    "- 이론은 등분산 깨지면 영향을 많이 받을 걸"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
    "id": "11dc95b1-ca24-4c19-8a30-196e8ca3aca0",
    "metadata": {},
    "outputs": [
@@ -1506,48 +1501,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4322cd39-080b-4f82-9043-8694c4fb2388",
+   "metadata": {},
+   "source": [
+    "pivotal 좋아\n",
+    "\n",
+    "percent 별로\n",
+    "\n",
+    "이론 별로"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 66,
    "id": "89c92094-ceda-4a97-b2e6-ec95edeeb59a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>0.934</li><li>0.946</li><li>0.902</li><li>0.908</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 0.934\n",
-       "\\item 0.946\n",
-       "\\item 0.902\n",
-       "\\item 0.908\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 0.934\n",
-       "2. 0.946\n",
-       "3. 0.902\n",
-       "4. 0.908\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1] 0.934 0.946 0.902 0.908"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrap C.I. (normal interval):  0.934 \n",
+      "Bootstrap C.I. (Pivotal interval):  0.946 \n",
+      "Bootstrap C.I. (Percentile interval):  0.902 \n",
+      "theoretical C.I. (normal interval):  0.908"
+     ]
     }
    ],
    "source": [
     "# coverage proportions\n",
-    "c(mean(apply(BN-1,1,prod)<0),mean(apply(BP-1,1,prod)<0),mean(apply(BPer-1,1,prod)<0),mean(apply(AN-1,1,prod)<0))"
+    "cat(\"Bootstrap C.I. (normal interval): \",c(mean(apply(BN-1,1,prod)<0)),\"\\nBootstrap C.I. (Pivotal interval): \",c(mean(apply(BP-1,1,prod)<0)),\"\\nBootstrap C.I. (Percentile interval): \",c(mean(apply(BPer-1,1,prod)<0),\"\\ntheoretical C.I. (normal interval): \",c(mean(apply(AN-1,1,prod)<0))))"
    ]
   },
   {
