--- a/_notebooks/2022-04-01-Bootstrap.ipynb
+++ b/_notebooks/2022-04-01-Bootstrap.ipynb
@@ -2273,14 +2273,29 @@
    "id": "c0bb980a-4208-41b6-8fbb-bc57c75945d2",
    "metadata": {},
    "source": [
-    "Permutation test\n",
+    "Permutation test순열 검정법\n",
     "- 검정할 때 쓰는, 검정을 위한 방법 \n",
     "- C.I. 안 써!\n",
     "- 범주형에 유용하다(그룹 간 차이)\n",
     "- 복잡하면 쓰기 어렵다\n",
     "- 전제: 귀무가설 하에서(null distribution) 표본 분포하는 것(?) $\\rightarrow$ 찾아보기..\n",
     "- 검정에 대한 기본적 원리를 알고 있다면...\n",
-    "- 표본$\\hat{\\theta}$의 분포만 안다면..."
+    "- 표본$\\hat{\\theta}$의 분포만 안다면...\n",
+    "\n",
+    "\n",
+    "만약 두 표본 그룹이 동일한 모집단에서 추출되었다고 한다면, 두 그룹 안에 있는 샘플들을 교환한 뒤 통계적으로 검증해도 여전히 두 그룹간에는 차이가 없어야 한다.\n",
+    "\n",
+    "우리는 샘플들을 섞어가면서 통계량을 여러번 추출할 것이다.\n",
+    "\n",
+    "그리고 추출된 통계량들의 값의 분포를 확인해보면 원래 주어진 데이터에서 계산한 통계량이 얼마나 큰 값인지 유추해볼 수 있을 것이다.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18f16bb9-3eca-49b4-a9b9-12e974f9aee4",
+   "metadata": {},
+   "source": [
+    "ref: https://angeloyeo.github.io/2021/10/28/permutation_test.html"
    ]
   },
   {
@@ -2291,6 +2306,19 @@
     "Bootstrap\n",
     "- C.I. 구성, 분산 추정에 많이 사용\n",
     "- 다소 modern한 방법"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06bed3fe-e35b-4637-bb08-ad22f6099d4c",
+   "metadata": {},
+   "source": [
+    "부트스트랩도 permutation test와 유사하게 추정량(estimator)에 대한 분포를 확인하게 해주는 비모수통계 기법이다.\n",
+    "\n",
+    "차이가 있다면 크게 두 가지로 볼 수 있을 것 같다. 목적에 맞게 적절한 방법을 선택하도록 하자.\n",
+    "\n",
+    "1. Bootstrap은 estimator의 Confidence interval을 확인하기 위한 목적으로 주로 사용되는 반면 Permutation test는 null hypothesis를 test하기 위해 만들어졌다. \n",
+    "2. 수행 과정 상에서는 Bootstrap은 중복을 허용하는 resampling을 수행하는 반면 permutation test는 중복없는 재배열을 수행한다는 차이점이 있다. "
    ]
   }
  ],
