--- a/_notebooks/2022-04-03-Earthquake.ipynb
+++ b/_notebooks/2022-04-03-Earthquake.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 616,
+   "execution_count": 632,
    "id": "27dbae2c-9cc1-41da-8c10-bfabbd46ec3c",
    "metadata": {
     "tags": []
@@ -55,6 +55,7 @@
     }
    ],
    "source": [
+    "#collapse\n",
     "#collapse_output\n",
     "with plt.style.context('dark_background'):\n",
     "    fig,ax = plt.subplots(figsize = (16,8))\n",
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 620,
+   "execution_count": 633,
    "id": "6b5d67c9-3852-4308-90e8-bb37844280cb",
    "metadata": {
     "tags": []
@@ -86,6 +87,7 @@
     }
    ],
    "source": [
+    "#collapse\n",
     "#collapse_output\n",
     "_a = pd.DataFrame({'index':_df.query('Year==\"2010\"').index,'a':np.float32(_df.query('Year==\"2010\"').comp2 + np.abs(_df.query('Year==\"2010\"').sort_values('comp2').reset_index().iloc[0,7]))})\n",
     "\n",
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": 634,
    "id": "b051f9a5-dd7d-45c2-a3e6-c9fbfd9c2907",
    "metadata": {},
    "outputs": [],
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 630,
+   "execution_count": 635,
    "id": "c3b9235d-5e48-4a96-af0c-d8b216b73ba4",
    "metadata": {},
    "outputs": [],
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 631,
+   "execution_count": 636,
    "id": "78aec7f8-e7a1-4246-ac4f-f3229f97700e",
    "metadata": {
     "tags": []
@@ -142,6 +144,7 @@
     }
    ],
    "source": [
+    "#collapse\n",
     "#collapse_output\n",
     "_aaa = _df.query('Year==\"2010\"').sort_values('comp2').reset_index()\n",
     "_aaa['a2']=node_sizes\n",
